# SVD-Jacobi-MPI-CUDA

./: CMakeLists.txt  main.cu
lib/: JacobiMethods.cu  JacobiMethods.cuh  Matrix.cuh  Utils.cu  Utils.cuh  global.cuh
